2024-05-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

2024-05-28  Michael Chirico  <chiricom@google.com>

	* R/extensions.R: Build error strings with stop(), avoiding paste()
	* src/init.c: Remove placeholders for unimplemented methods
	* R/00classes.R: Idem
	* R/field_count.R: Idem
	* R/wrapper_ServiceDescriptor.R: Idem

2024-05-24  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-04-23  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2024-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

2024-03-20  Xufei Tan  <xufei@google.com>

	* inst/tinytest/test_addressbook.R: use `toTextFormat()` in tests

2024-01-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.22
	* configure.ac: Idem
	* configure: Idem

2024-01-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars.ucrt: Apply patch emailed by Tomas Kalibera to support
	pkg-config if present (as e.g. under upcoming Rtools)

2023-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.21
	* configure.ac: Idem
	* configure: Idem

2023-12-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* R/00classes.R: Tweak .Call() update some more
	* R/field_count.R: Idem
	* R/wrapper_ServiceDescriptor.R: Idem

	* README.md: Update / remove stale references to old ProtoBuf doc site
	* man/ArrayInputStream-class.Rd: Idem
        * man/ArrayOutputStream-class.Rd: Idem
        * man/Descriptor-class.Rd: Idem
        * man/EnumValueDescriptor-class.Rd: Idem
        * man/FileDescriptor-class.Rd: Idem
        * man/FileInputStream-class.Rd: Idem
        * man/FileOutputStream-class.Rd: Idem
        * man/Message-class.Rd: Idem
        * man/ZeroCopyInputStream-class.Rd: Idem